--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ license = "MIT"
 
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
+csv = "1.3.0"
+serde = { version = "1.0.214", features = ["derive"] }
+serde_json = "1.0.132"
