--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "rcli"
 version = "0.1.0"
+authors = ["Hey <author@example.com>"]
 edition = "2021"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.92"
 clap = { version = "4.5.20", features = ["derive"] }
 csv = "1.3.0"
 serde = { version = "1.0.214", features = ["derive"] }
