--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0.92"
 base64 = "0.22.1"
+blake3 = "1.5.4"
 clap = { version = "4.5.20", features = ["derive"] }
 csv = "1.3.0"
 rand = "0.8.5"
