--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0.92"
+axum = { version = "0.7.7", features = ["http2", "query", "tracing"] }
 base64 = "0.22.1"
 blake3 = "1.5.4"
 clap = { version = "4.5.20", features = ["derive"] }
@@ -18,5 +19,8 @@ rand = "0.8.5"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 serde_yaml = "0.9.34"
+tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
 toml = "0.8.19"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 zxcvbn = "3.1.0"
