--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,13 @@ rand = "0.8.5"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 serde_yaml = "0.9.34"
-tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
+tokio = { version = "1.41.1", features = [
+  "rt",
+  "rt-multi-thread",
+  "macros",
+  "net",
+  "fs",
+] }
 toml = "0.8.19"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
