--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tokio = { version = "1.41.1", features = [
   "fs",
 ] }
 toml = "0.8.19"
+tower-http = { version = "0.6.1", features = ["compression-full", "cors", "trace", "fs"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 zxcvbn = "3.1.0"
